src/tests/snapshots/gitu__tests__push__push.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 _______ main origin/main add new-file                                          |
 _______ add initial-file                                                       |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git push                                                                      |
To                                                                              |
   _______.._______  main -> main                                               |
styles_hash: 4b89bed7f095a906
