src/tests/snapshots/gitu__tests__push__push_set_push_remote_push_again.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 127f7a4 main origin/main add new-file2                                         |
 e7eb2bd add new-file                                                           |
 b66a0bf add initial-file                                                       |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git push origin refs/heads/main:refs/heads/main                               |
To                                                                              |
   e7eb2bd..127f7a4  main -> main                                               |
styles_hash: f3a13be5658915e0
