src/tests/snapshots/gitu__tests__push__push_setup_push_remote.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Push                   Arguments                                               |
 p     to origin        -n Dry run (--dry-run)                                  |
 u     to origin/main   -F Force (--force)                                      |
 e     to elsewhere     -f Force with lease (--force-with-lease)                |
 q/esc Quit/Close       -h Disable hooks (--no-verify)                          |
styles_hash: 7d2fbf4f1a23e447
