src/tests/snapshots/gitu__tests__push__push_setup_upstream.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch new-branch                                                           |
▌Your branch is up to date with 'main'.                                         |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main new-branch add new-file                                           |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Push                             Arguments                                     |
 p     pushRemote, setting that   -n Dry run (--dry-run)                        |
 u     to main                    -F Force (--force)                            |
 e     to elsewhere               -f Force with lease (--force-with-lease)      |
 q/esc Quit/Close                 -h Disable hooks (--no-verify)                |
styles_hash: d8ef8e3b4e8b12dd
